@@ -185,6 +185,11 @@ restartTestNative_LDADD = @SDKlibrary@ -lCADGeom-CAPRI -lMeat \
 	@CAPRINativelibrary@ $(LastLib)
 restartTestNative_LDFLAGS = $(all_LDFLAGS)
 
+bin_PROGRAMS += unitNative
+unitNative_CFLAGS = $(all_CFLAGS)
+unitNative_SOURCES = unit_main.c
+unitNative_LDADD = $(refineLib) @CAPRINativelibrary@ $(LastLib)
+unitNative_LDFLAGS = $(all_LDFLAGS)
 
 if BUILD_PROE_KERNEL
 
