@@ -1,3 +1,8 @@
+2004-09-22 18:28 Mike Park  <mike.park@nasa.gov>
+
+	* src/unit_main.c new driver to start looking at unit adaptation
+	problems
+
 2004-09-22 17:00 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmetric.c (gridSetGlobalMap) added to apply a metric to
